Fixing overflow issues with the CV Header to do with the email tag not being able to wrap - Working on combining the components in the selectable forms and then on custom error messages from zod

--- a/src/components/cv-layout/components/HeaderCV.css
+++ b/src/components/cv-layout/components/HeaderCV.css
@@ -7,6 +7,8 @@ header.cv-header {
     height: 100%;
 
     display: grid;
+
+    /* overflow: hidden; */
 }
 
 section.cv-container[data-header-layout-position="Top"] header.cv-header {
@@ -26,7 +28,7 @@ section.cv-container[data-header-layout-position="Top"] header.cv-header {
 }
 
 section.cv-container[data-header-layout-position="Left"] header.cv-header,
-section.cv-container[data-header-layout-position="Right"] header.cv-header  {
+section.cv-container[data-header-layout-position="Right"] header.cv-header {
     grid-template-areas: "header"
         "email"
         "phone"
@@ -34,7 +36,7 @@ section.cv-container[data-header-layout-position="Right"] header.cv-header  {
 
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, min-content);
-    
+
 
     place-items: start;
 
@@ -43,10 +45,14 @@ section.cv-container[data-header-layout-position="Right"] header.cv-header  {
 
     row-gap: 2rem;
 
-    & > * {
+    &>* {
         /* width: 100%; */
 
         text-align: left;
+    }
+
+    & > p{
+        width: 100%;
     }
 }
 
@@ -62,16 +68,29 @@ header.cv-header>h1 {
 header.cv-header>p {
     font-size: 1.8rem;
     font-weight: 500;
-    text-align: center;
+    text-align: left;
 
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     gap: .8rem;
 
-    & > svg{
+    /* width: 100%; */
+
+
+
+    overflow: hidden;
+
+    &>svg {
         flex-shrink: 0;
     }
+
+    &>span {
+        flex: 1 1 0;
+        word-break: break-word;
+
+    }
+
     /* text-transform: uppercase; */
 }
 
@@ -89,13 +108,4 @@ header.cv-header>p.cv-header-phone {
 
 header.cv-header>p.cv-header-address {
     grid-area: address;
-}
-
-
-
-
-
-
-section.cv-container[data-header-layout-position="Right"] header.cv-header {
-
 }
