--- a/src/index.css
+++ b/src/index.css
@@ -35,8 +35,8 @@ body {
   background-color: black;
   color: white;
 
-  width: 100dvw;
-  height: 100dvh;
+  width: 100%;
+  height: 100%;
   min-width: fit-content;
   min-height: fit-content;
 
